--- a/style.css
+++ b/style.css
@@ -16,6 +16,10 @@ box-sizing: border-box;
 
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 .container-grid{
     width: 80vw;
 
@@ -39,6 +43,10 @@ box-sizing: border-box;
 
 header {
     height: 165px;
+}
+
+header button {
+    display: none;
 }
 
 header img {
@@ -77,7 +85,7 @@ header .container-grid {
     text-decoration-color: white;  
 }
 
-.conteudo.banner {
+.conteudo-banner {
     height: calc(100vh - 280px);
 
     display: flex;
@@ -90,6 +98,40 @@ header .container-grid {
 
     font-family: "Anta";
     font-size: 32px;
+}
+
+.conteudo-banner span {
+    display: block;
+
+    overflow: hidden;
+    border-right: 5px solid var(--laranja-gamifica);
+    white-space: nowrap;
+
+    animation: 
+        digitando 2s steps(40, end),
+        cursor 0.75s step-end infinite
+    ;
+}
+
+@keyframes digitando {
+    from {
+        width: 0;
+    }
+
+    to {
+        width: 100%;
+    }
+}
+
+@keyframes cursor {
+    from,
+    to {
+        border-color: transparent;
+    }
+
+    50% {
+        border-color: var(--laranja-gamifica);
+    }
 }
 
 #sobre {
@@ -416,5 +458,60 @@ footer .container-grid {
 
 .icones-redes a:hover {
     color: var(--laranja-gamifica)
+}
+
+@media screen and (max-width: 1300px) {
+   header {
+    position: relative;
+   }
+
+
+   header button {
+    width: 50px;
+
+    display: unset;
+
+    background: none;
+    border: none;
+
+   }
+
+   header svg {
+    fill: white;
+   }
+
+
+    nav.menu {
+        height: 500px;
+        width: 350px;
+
+        padding: 0px 30px;
+
+        flex-direction: column;
+        justify-content: space-around;
+
+        background-color: #000000ba;
+
+        position: absolute;
+        top: 165px;
+        right: 0px;
+    }
+
+    #sobre {
+        padding: 100px 15%;
+    }
+
+    .card {
+        height: 320px;
+        width: 200px;
+    }
+
+    #contato form {
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 1080px) {
+    
 }
 
