--- a/style.css
+++ b/style.css
@@ -151,7 +151,7 @@ h2 {
 }
 
 #sobre p{
-    font-family: "Montserrat";
+    font-family: "Monserrat";
     font-size: 17px;
 
     text-align: left;
@@ -512,6 +512,147 @@ footer .container-grid {
 }
 
 @media screen and (max-width: 1080px) {
+    
+}
+
+@media screen and (max-width: 800px) {
+    .card {
+        flex-basis: 45%;
+    }
+}
+
+
+@media screen and (max-width: 700px) {
+    #sobre {
+        height: unset;
+        margin-bottom: 40px;
+    }
+
+    #sobre h2 {
+        margin-bottom: 50px;
+    }
+
+    #sobre p {
+        margin-bottom: 30px;
+    }
+
+    #cases,
+    #contato {
+        margin-bottom: unset;
+    }
+
+    #portfolio a{
+        width: 100%;
+        text-align: center;
+    }
+
+    .campo,
+    .campo-descricao,
+    #contato form button{
+        width: 75%;
+    }
+}
+
+@media screen and (max-width: 520px){
+    .container-grid{
+        width: 90%;
+    }
+
+    header img{
+        width: 200px;
+    }
+
+    .banner{
+        background-size: cover;
+    }
+
+    .conteudo-banner p{
+        font-size: 24px;
+    }
+
+    nav.menu{
+        width: 100%;
+
+        display: none;
+    }
+
+    #sobre{
+        padding-right: 0px;
+        padding-left: 0px;
+    }
+
+    #sobre p{
+        width: 90%;
+        margin: 0 auto;
+        margin-bottom: 20px;
+    }
+
+    #cases.container-grid{
+        width: 100%;
+        margin: unset;
+    }
+
+    .container-cards{
+        flex-wrap: nowrap;
+
+        gap: 40px;
+
+        overflow-x: auto;
+    }
+
+    .card{
+        height: 400px;
+        width: 280px;
+
+        flex-basis: unset;
+    }
+
+    .card:first-child{
+        margin-left: 30px;
+    }
+
+    .card:last-child{
+        margin-right: 30px;
+    }
+
+    #portfolio{
+        margin-bottom: 0;
+    }
+
+    #contato{
+        padding-top: 150px;
+
+        background-color: var(--roxo-gamifica);
+        color: white;
+    }
+
+    #contato h2{
+        margin-bottom: 0;
+    }
+
+    #contato form{
+        width: 100%;
+        border-radius: 0;
+    }
+}
+
+@media screen and (max-width: 400px){
+    header img{
+        width: 160px;
+    }
+
+    header svg{
+        width: 40px;
+    }
+
+    .conteudo-banner p{
+        font-size: 20px;
+    }
+
+    footer img{
+        width: 200px;
+    }
+
     
 }
 
