--- a/style.css
+++ b/style.css
@@ -32,14 +32,51 @@ html {
 .banner {
     height: 100vh;
 
-
-
-    background-image:linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(mg/bg-room.png);
     background-repeat: no-repeat;
 
     background-position: 165% 40%;
 
+    position: relative;
+
+    
 }
+
+.primeiro-banner {
+    background-image: linear-gradient(90deg, rgba(53, 24, 104, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(mg/bg-room.png);
+}
+
+.segundo-banner {
+    background-image: linear-gradient(90deg, rgba(54, 104, 36, 1) 0%, rgba(54, 104, 36, 0.8) 100%), url(mg/bg-room.png);
+}
+
+.terceiro-banner {
+    background-image: linear-gradient(90deg, rgba(104, 24, 48, 1) 0%, rgba(53, 24, 104, 0.8) 100%), url(mg/bg-room.png);
+}
+
+#botao-voltar, #botao-proximo {
+    width: 30px;
+
+    background: none;
+    border: none;
+
+    cursor: pointer;
+
+    position: absolute;
+}
+
+#botao-voltar svg, #botao-proximo svg {
+    /* //fill- preenchimento para svg */
+    fill: #ffffff76;
+}
+
+#botao-voltar {
+    left: 4%;
+}
+
+#botao-proximo {
+    right: 4%;
+}
+
 
 header {
     height: 165px;
@@ -466,6 +503,11 @@ footer .container-grid {
     display: none;
 }
 
+
+#icone-barras {
+    display: none;
+}
+
 @media screen and (max-width: 1300px) {
    header {
     position: relative;
@@ -570,7 +612,10 @@ footer .container-grid {
 
     .banner{
         background-size: cover;
+
     }
+
+
 
     .conteudo-banner p{
         font-size: 24px;
